--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -152,7 +152,7 @@ package:
                                                           # grazie al file repo_name.tmp e release.tmp conosco il tipo
                                                           #   di destinazione: RELEASE o SNAPSHOT
 
-    - python3 setup.py sdist --version='$CI_COMMIT_TAG'   # non si devono fare trucchi, imposto la versione nel setup.py e
+    - python3 setup.py sdist --version=$CI_COMMIT_TAG     # non si devono fare trucchi, imposto la versione nel setup.py e
                                                           #   nei file di cfg a partire dal tag inserito, che DEVE
                                                           #   RISPETTARE IL VERSIONAMENTO SEMANTICO 2.0 con nomi di
                                                           #   pre-release specificati ne file check_version.py
