--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ start:
   stage: start
 
   script:
-    - pip3 install semantic-version             # Installo la dipendenza semantic-version
+    - pip3 -v install semantic-version wheel    # Installo le dipendenze semantic-version e wheel
     - python3 check-version.py $CI_COMMIT_TAG   # Genera un file chiamato release.tmp che contiene o "RELEASE" o "SNAPSHOT"
                                                 #   in base a come é formato il tag: se il tag:
                                                 #   pre-release: test -> SNAPSHOT
@@ -66,6 +66,7 @@ package:
   stage: package
 
   script:
+    - pip3 -v install semantic-version wheel              # Installo le dipendenze semantic-version e wheel
                                                           # grazie al file repo_name.tmp e release.tmp conosco il tipo
                                                           # di destinazione: RELEASE o SNAPSHOT
 
