do not building wheel anymore and default target is tar.gz archive

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [aliases]
 clean_egg_info = egg_info -Db ''
-release = clean_egg_info sdist bdist_wheel
+release = clean_egg_info sdist
 source = register sdist binary
 binary = bdist_egg upload --show-response
 
@@ -8,7 +8,7 @@ binary = bdist_egg upload --show-response
 repository = https://packages.smartme.io/python
 
 [sdist]
-formats = zip gztar
+formats = gztar
 
 [metadata]
 name = arancino
