some fixes and introduced stack trace print option in configurations

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -190,3 +190,7 @@ rotate = 1
 file_log = arancino.log
 file_error = arancino.error.log
 #file_stats = arancino.stats.log
+
+
+# print stack trace on errors
+print_stack_trace = False
