--- a/config/arancino.test.cfg
+++ b/config/arancino.test.cfg
@@ -186,3 +186,6 @@ rotate = 1
 file_log = arancino.log
 file_error = arancino.error.log
 #file_stats = arancino.stats.log
+
+# print stack trace on errors
+print_stack_trace = True
