--- a/setup.cfg
+++ b/setup.cfg
@@ -13,12 +13,18 @@ formats = gztar
 [metadata]
 name = arancino
 version = 2.1.3
-description = Arancino library Python Module
-author = smartme.io
-author_email = info@smartme.io
-long_description = file: README.md
-long_description_content_type = text/x-rst; charset=UTF-8
+description = Arancino Module for Arancino Library
+author = Sergio Tomasello
+author_email = sergio@smartme.io
+long_description =
+    Receives commands from Arancino Library (uC) trough the Arancino Cortex Protocol
+    over serial connection. It is designed to run under Arancino OS and can manage
+    multiple serial connections.
+long_description_content_type = text/markdown; charset=UTF-8
+platforms = Unix
+license= Apache License, Version 2.0
 license_file = LICENSE
+url = http://www.arancino.cc
 keywords = CPAN PyPI distutils eggs package management
 classifiers =
     Development Status :: 5 - Production/Stable
