--- a/setup.cfg
+++ b/setup.cfg
@@ -41,3 +41,31 @@ classifiers =
     Topic :: System :: Archiving :: Packaging
     Topic :: System :: Systems Administration
     Topic :: Utilities
+
+[options]
+zip_safe = False
+include_package_data = True
+install_requires =
+    pyserial>=3.4
+    redis>=2.10.6
+    setuptools>=41.4.0
+    semantic-version>=2.8.4
+    uptime>=3.0.1
+    Flask>=1.1.1
+    Flask_HTTPAuth>=3.3.0
+    requests>=2.23.0
+    netifaces>=0.10.9
+    importlib; python_version > "3"
+
+[options.packages.find]
+exclude =
+    test
+
+[options.data_files]
+arancino =
+    extras/pre-install.sh
+    extras/post-install.sh
+    extras/arancino.service
+    config/arancino.cfg
+    config/arancino.test.cfg
+    LICENSE
