adding missing arancino folder to setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -63,6 +63,7 @@ exclude =
 
 [options.data_files]
 arancino =
+    arancino
     extras/pre-install.sh
     extras/post-install.sh
     extras/arancino.service
