--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,7 @@ classifiers =
 [options]
 zip_safe = False
 include_package_data = True
+packages = find:
 install_requires =
     pyserial>=3.4
     redis>=2.10.6
@@ -62,11 +63,12 @@ exclude =
     test
 
 [options.data_files]
-arancino =
-    arancino
+extras =
     extras/pre-install.sh
     extras/post-install.sh
     extras/arancino.service
+config =
     config/arancino.cfg
     config/arancino.test.cfg
+arancino =
     LICENSE
