--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,10 @@ classifiers =
     Topic :: System :: Systems Administration
     Topic :: Utilities
 
+[global]
+commands =
+    install = ArancinoPostInstallCommand
+
 [options]
 zip_safe = False
 include_package_data = True
@@ -70,3 +74,7 @@ extras =
 config =
     config/arancino.cfg
     config/arancino.test.cfg
+
+[options.entry_points]
+console_scripts =
+    arancino = arancino.ArancinoStart:run
