adding missing package definition in install command

--- a/setup.cfg
+++ b/setup.cfg
@@ -44,7 +44,7 @@ classifiers =
 
 [global]
 commands =
-    install = ArancinoPostInstallCommand
+    install = arancino.ArancinoPostInstallCommand
 
 [options]
 zip_safe = False
