fix CU-b0ymd9 - Livello di log da impostare a INFO invece che DEBUG

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -172,7 +172,7 @@ reset_on_connect = False
 #------------------------------------------------------------------------------------------
 [log]
 # Accetpted values are: ERROR, WARNING, INFO, DEBUG
-level = DEBUG
+level = INFO
 name = Arancino
 
 # handlers
