--- a/setup.cfg
+++ b/setup.cfg
@@ -56,6 +56,7 @@ install_requires =
     Flask_HTTPAuth>=3.3.0
     requests>=2.23.0
     netifaces>=0.10.9
+    gunicorn>=20.0.4
     importlib; python_version > "3"
 
 [options.packages.find]
