upd: added gunicorn config file to setup

--- a/setup.cfg
+++ b/setup.cfg
@@ -71,6 +71,7 @@ extras =
 config =
     config/arancino.cfg
     config/arancino.test.cfg
+    config/gunicorn.cfg.py
 
 [options.entry_points]
 console_scripts =
