updating CHANGELOG.md and version

--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,7 @@ formats = gztar
 
 [metadata]
 name = arancino
-version = 2.1.3
+version = 2.1.5
 description = Arancino Module for Arancino Library
 author = Sergio Tomasello
 author_email = sergio@smartme.io
@@ -55,8 +55,7 @@ install_requires =
     Flask>=1.1.1
     Flask_HTTPAuth>=3.3.0
     requests>=2.23.0
-    netifaces>=0.10.9
-    importlib; python_version > "3"
+    netifaces>=0.10.9; python_version > "3"
 
 [options.packages.find]
 exclude =
