introduced a new datastore for reserved keys, new get command for reserved keys, new reserved keys MODENV #CU-fz4f66  #CU-fz4baj  #CU-acujnq

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -33,6 +33,7 @@ connection_attempts = 5
 datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
+datastore_rsvd_db = 3
 
 
 #------------------------------------------------------------------------------------------
@@ -41,6 +42,7 @@ datastore_per_db = 2
 datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
+datastore_rsvd_db = 3
 
 
 #------------------------------------------------------------------------------------------
@@ -48,6 +50,7 @@ datastore_per_db = 2
 
 #volatile
 datastore_std_db = 0
+datastore_rsvd_db = 1
 
 #persistent
 datastore_dev_db = 0
