--- a/config/arancino.test.cfg
+++ b/config/arancino.test.cfg
@@ -32,6 +32,7 @@ connection_attempts = 5
 datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
+datastore_rsvd_db = 3
 
 
 #------------------------------------------------------------------------------------------
@@ -40,6 +41,7 @@ datastore_per_db = 2
 datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
+datastore_rsvd_db = 3
 
 
 #------------------------------------------------------------------------------------------
@@ -47,6 +49,7 @@ datastore_per_db = 2
 
 #volatile
 datastore_std_db = 0
+datastore_rsvd_db = 1
 
 #persistent
 datastore_dev_db = 0
