--- a/extras/arancino.service
+++ b/extras/arancino.service
@@ -14,8 +14,7 @@ Environment="ARANCINOLOG=/var/log/arancino"
 Environment="ARANCINOENV=PROD"
 Environment="FLASK_ENV=production"
 
-#ExecStart=/usr/bin/python3 /usr/local/lib/python3.5/dist-packages/arancino/ArancinoStart.py
-ExecStart=/bin/bash -c '/usr/local/bin/gunicorn -c "$ARANCINOCONF/gunicorn.cfg.py" arancino.ArancinoStart:app'
+ExecStart=/bin/bash -c 'gunicorn -c "$ARANCINOCONF/gunicorn.cfg.py" arancino.ArancinoStart:app'
 Restart=on-failure
 RestartSec=15
 TimeoutStopSec=60
