reinstating python3 dependency in setup.cfg as it should

--- a/setup.cfg
+++ b/setup.cfg
@@ -56,7 +56,7 @@ install_requires =
     Flask_HTTPAuth>=3.3.0
     requests>=2.23.0
     netifaces>=0.10.9
-    gunicorn>=20.0.4
+    gunicorn>=20.0.4; python_version > "3"
 
 [options.packages.find]
 exclude =
