--- a/config/arancino.prod.cfg
+++ b/config/arancino.prod.cfg
@@ -7,8 +7,11 @@ cycle_time = 10
 #------------------------------------------------------------------------------------------
 [redis]
 
-# redis server host
-host = localhost
+# redis server host of volatile instance
+host_volatile = localhost
+
+# redis server host of volatile instance
+host_persistent = localhost
 
 # redis server port of volatile instance
 port_volatile = 6379
