--- a/setup.cfg
+++ b/setup.cfg
@@ -68,8 +68,8 @@ extras =
     extras/post-install.sh
     extras/arancino.service
 config =
-    config/arancino.cfg
-    config/arancino.test.cfg
+    config/arancino.prod.cfg
+    config/arancino.dev.cfg
     config/gunicorn.cfg.py
 
 [options.entry_points]
