--- a/config/arancino.prod.cfg
+++ b/config/arancino.prod.cfg
@@ -10,7 +10,7 @@ cycle_time = 10
 # redis server host of volatile instance
 host_volatile = localhost
 
-# redis server host of volatile instance
+# redis server host of persistent instance
 host_persistent = localhost
 
 # redis server port of volatile instance
