new STORE Cortex Command. #CU-acuhwp

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -36,6 +36,7 @@ datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
+datastore_tse_db = 4
 
 
 #------------------------------------------------------------------------------------------
@@ -45,6 +46,7 @@ datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
+datastore_tse_db = 4
 
 
 #------------------------------------------------------------------------------------------
@@ -53,6 +55,7 @@ datastore_rsvd_db = 3
 #volatile
 datastore_std_db = 0
 datastore_rsvd_db = 1
+datastore_tse_db = 2
 
 #persistent
 datastore_dev_db = 0
