first Arancino Reader commit

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -198,3 +198,27 @@ file_error = arancino.error.log
 
 # print stack trace on errors
 print_stack_trace = True
+
+#------------------------------------------------------------------------------------------
+
+[transmitter.reader]
+# Represents the time (in seconds) in which the reader collects data
+# and transfers it to the upper level
+cycle_time = 30
+
+[transmitter.parser]
+template_type = JSON
+template_file = template.json
+
+[transmitter.sender]
+communication_type = MQTT
+
+[transmitter.sender.mqtt]
+communication_mqtt_host = localhost
+communication_mqtt_port = 12345
+communication_mqtt_channel = channel
+
+[transmitter.sender.http]
+communication_http_host = localhost
+communication_http_port = 12345
+communication_http_endpoint = /
