introduced parser and sender CU-gn8b8f

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -206,19 +206,32 @@ print_stack_trace = True
 # and transfers it to the upper level
 cycle_time = 30
 
+
 [transmitter.parser]
-template_type = JSON
-template_file = template.json
+class = Simple
+
+[transmitter.parser.simple]
+
+;[transmitter.parser.json]
+;template_type = JSON
+;template_file = template.json
 
 [transmitter.sender]
-communication_type = MQTT
+# Available Senders are: SenderDoNothing, SenderTcpSocket
+class = TcpSocket
 
-[transmitter.sender.mqtt]
-communication_mqtt_host = localhost
-communication_mqtt_port = 12345
-communication_mqtt_channel = channel
+[transmitter.sender.donotihing]
 
-[transmitter.sender.http]
-communication_http_host = localhost
-communication_http_port = 12345
-communication_http_endpoint = /
+[transmitter.sender.tcpsocket]
+host = localhost
+port = 1476
+
+;[transmitter.sender.mqtt]
+;communication_mqtt_host = localhost
+;communication_mqtt_port = 12345
+;communication_mqtt_channel = channel
+;
+;[transmitter.sender.http]
+;communication_http_host = localhost
+;communication_http_port = 12345
+;communication_http_endpoint = /
