--- a/setup.cfg
+++ b/setup.cfg
@@ -49,6 +49,7 @@ packages = find:
 install_requires =
     pyserial>=3.4
     redis>=2.10.6
+    redistimeseries>=1.4.3
     setuptools>=41.4.0
     semantic-version>=2.8.4
     uptime>=3.0.1
