--- a/config/arancino.prod.cfg
+++ b/config/arancino.prod.cfg
@@ -200,3 +200,40 @@ file_error = arancino.error.log
 
 # print stack trace on errors
 print_stack_trace = True
+
+#------------------------------------------------------------------------------------------
+
+[transmitter.reader]
+# Represents the time (in seconds) in which the reader collects data
+# and transfers it to the upper level
+cycle_time = 30
+
+
+[transmitter.parser]
+class = Simple
+
+[transmitter.parser.simple]
+
+;[transmitter.parser.json]
+;template_type = JSON
+;template_file = template.json
+
+[transmitter.sender]
+# Available Senders are: SenderDoNothing, SenderTcpSocket
+class = DoNothing
+
+[transmitter.sender.donotihing]
+
+[transmitter.sender.tcpsocket]
+host = localhost
+port = 1476
+
+;[transmitter.sender.mqtt]
+;communication_mqtt_host = localhost
+;communication_mqtt_port = 12345
+;communication_mqtt_channel = channel
+;
+;[transmitter.sender.http]
+;communication_http_host = localhost
+;communication_http_port = 12345
+;communication_http_endpoint = /
