update config file

--- a/config/arancino.prod.cfg
+++ b/config/arancino.prod.cfg
@@ -37,6 +37,7 @@ datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
+datastore_tse_db = 4
 
 
 #------------------------------------------------------------------------------------------
@@ -46,6 +47,7 @@ datastore_std_db = 0
 datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
+datastore_tse_db = 4
 
 
 #------------------------------------------------------------------------------------------
@@ -54,6 +56,7 @@ datastore_rsvd_db = 3
 #volatile
 datastore_std_db = 0
 datastore_rsvd_db = 1
+datastore_tse_db = 2
 
 #persistent
 datastore_dev_db = 0
