big update on arancino transmitter. introduced ParserTemplate and other fixes and improvements

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -3,7 +3,6 @@
 #polling cycle time (in seconds) to discover new ports.
 cycle_time = 10
 
-
 #------------------------------------------------------------------------------------------
 [redis]
 
@@ -22,12 +21,25 @@ port_persistent = 6380
 # decode response in redis connection
 decode_response = True
 
-# policy for data storage: accepted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-# VOLATILE:
+# policy for data storage: accepted values are:
+# - VOLATILE: all databases are volatile
+# - PERSISTENT: all databases are persistent (only in production with two redis instances)
+# - VOLATILE_PERSISTENT: data store, reserved key store and time series store are volatile;
+#       device store and persistent data store are persistent (only in production with two redis instances).
 instance_type = VOLATILE
 
 # redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
 connection_attempts = 5
+
+# time series: Maximum age for samples compared to last event time (in milliseconds)
+#   Default: The global retention secs configuration of the database (by default, 0 )
+#   When set to 0, the series is not trimmed at all
+# - 60000: 1 Minute
+# - 3600000: 1 Hour
+# - 43200000: 12 Hours
+# - 86400000: 1 Day
+# - 604800000: 7 Days
+retetion = 3600000
 
 #------------------------------------------------------------------------------------------
 [redis.volatile]
@@ -38,7 +50,6 @@ datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
 
-
 #------------------------------------------------------------------------------------------
 [redis.persistent]
 
@@ -47,7 +58,6 @@ datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
-
 
 #------------------------------------------------------------------------------------------
 [redis.volatile_persistent]
@@ -60,7 +70,6 @@ datastore_tse_db = 2
 #persistent
 datastore_dev_db = 0
 datastore_per_db = 1
-
 
 #------------------------------------------------------------------------------------------
 [port]
@@ -99,7 +108,7 @@ filter_type=ALL
 filter_list = ["0x04d8:0xecd9", "0x04d8:0xecd9","0x04d8:0xecd9"]
 
 # Timeout in seconds in serial connection Min: 1
-timeout = 0
+timeout = 1
 
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 #   available placeholder are: (each attributes of a Port class can used as placeholder)
@@ -150,10 +159,10 @@ enabled = True
 hide = True
 
 # Filter works with the below list of VID:PID. Accepted filter type are: EXCLUDE, ONLY, ALL
-# EXCLUDE: excledus the ones in the list.
-# ONLY: acceptes only the ones in the list.
-# ALL: no filter, accepts all. This is the default filter type.
-filter_type=ALL
+# - EXCLUDE: excledus the ones in the list.
+# - ONLY: acceptes only the ones in the list.
+# - ALL: no filter, accepts all. This is the default filter type.
+filter_type = ALL
 
 # List of VID:PID used to make a filter
 filter_list = []
@@ -201,37 +210,34 @@ print_stack_trace = True
 
 #------------------------------------------------------------------------------------------
 
+[transmitter]
+# Enable or disable the transmitter module of Arancino
+enabled = False
+
 [transmitter.reader]
+
 # Represents the time (in seconds) in which the reader collects data
 # and transfers it to the upper level
 cycle_time = 30
 
-
 [transmitter.parser]
-class = Simple
+class = ParserTemplate
 
 [transmitter.parser.simple]
+# Configuration for ParserSimple
 
-;[transmitter.parser.json]
-;template_type = JSON
-;template_file = template.json
+[transmitter.parser.template]
+# Configuration for ParserTemplate
+
+# template file used to parse data with the template engine (jinja2)
+file = default.json.tmpl
 
 [transmitter.sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket
-class = TcpSocket
+class = SenderTcpSocket
 
 [transmitter.sender.donotihing]
 
 [transmitter.sender.tcpsocket]
 host = localhost
 port = 1476
-
-;[transmitter.sender.mqtt]
-;communication_mqtt_host = localhost
-;communication_mqtt_port = 12345
-;communication_mqtt_channel = channel
-;
-;[transmitter.sender.http]
-;communication_http_host = localhost
-;communication_http_port = 12345
-;communication_http_endpoint = /
