--- a/config/arancino.prod.cfg
+++ b/config/arancino.prod.cfg
@@ -3,7 +3,6 @@
 #polling cycle time (in seconds) to discover new ports.
 cycle_time = 10
 
-
 #------------------------------------------------------------------------------------------
 [redis]
 
@@ -22,13 +21,25 @@ port_persistent = 6380
 # decode response in redis connection
 decode_response = True
 
-# policy for data storage: accepted values are: VOLATILE, PERSISTENT, VOLATILE_PERSISTENT
-# VOLATILE:
+# policy for data storage: accepted values are:
+# - VOLATILE: all databases are volatile
+# - PERSISTENT: all databases are persistent (only in production with two redis instances)
+# - VOLATILE_PERSISTENT: data store, reserved key store and time series store are volatile;
+#       device store and persistent data store are persistent (only in production with two redis instances).
 instance_type = VOLATILE_PERSISTENT
 
 # redis connection attempts: -1 -> no limits, default 5 (every 3 seconds)
 connection_attempts = 5
 
+# time series: Maximum age for samples compared to last event time (in milliseconds)
+#   Default: The global retention secs configuration of the database (by default, 0 )
+#   When set to 0, the series is not trimmed at all
+# - 60000: 1 Minute
+# - 3600000: 1 Hour
+# - 43200000: 12 Hours
+# - 86400000: 1 Day
+# - 604800000: 7 Days
+retetion = 3600000
 
 #------------------------------------------------------------------------------------------
 [redis.volatile]
@@ -39,7 +50,6 @@ datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
 
-
 #------------------------------------------------------------------------------------------
 [redis.persistent]
 
@@ -48,7 +58,6 @@ datastore_dev_db = 1
 datastore_per_db = 2
 datastore_rsvd_db = 3
 datastore_tse_db = 4
-
 
 #------------------------------------------------------------------------------------------
 [redis.volatile_persistent]
@@ -62,7 +71,6 @@ datastore_tse_db = 2
 datastore_dev_db = 0
 datastore_per_db = 1
 
-
 #------------------------------------------------------------------------------------------
 [port]
 # folder for firmware to be flashed onto microcontroller.
@@ -71,10 +79,8 @@ firmware_path = /tmp/arancino/firmware
 # allowed file extensions for firmware
 firmware_file_types = ["bin", "hex"]
 
-
 # reset port on connection
 reset_on_connect = True
-
 
 #------------------------------------------------------------------------------------------
 [port.serial]
@@ -141,7 +147,6 @@ timeout = 1
 
 upload_command = /usr/bin/run-arancino-bossac {port._device} {firmware}
 
-
 # reset port on connection, override the default configuration
 reset_on_connect = True
 
@@ -154,10 +159,10 @@ enabled = True
 hide = True
 
 # Filter works with the below list of VID:PID. Accepted filter type are: EXCLUDE, ONLY, ALL
-# EXCLUDE: excledus the ones in the list.
-# ONLY: acceptes only the ones in the list.
-# ALL: no filter, accepts all. This is the default filter type.
-filter_type=ALL
+# - EXCLUDE: excledus the ones in the list.
+# - ONLY: acceptes only the ones in the list.
+# - ALL: no filter, accepts all. This is the default filter type.
+filter_type = ALL
 
 # List of VID:PID used to make a filter
 filter_list = []
@@ -175,7 +180,7 @@ id_template = TESTPORT
 # command to be spawn when upload api is called. The command could have one or more placeholders.
 upload_command =
 
-# reset port on connection, override the default configuration
+# reset port on connection, this override the default configuration
 reset_on_connect = False
 
 #------------------------------------------------------------------------------------------
@@ -200,43 +205,39 @@ file_log = arancino.log
 file_error = arancino.error.log
 #file_stats = arancino.stats.log
 
-
 # print stack trace on errors
 print_stack_trace = True
 
 #------------------------------------------------------------------------------------------
 
+[transmitter]
+# Enable or disable the transmitter module of Arancino
+enabled = False
+
 [transmitter.reader]
+
 # Represents the time (in seconds) in which the reader collects data
 # and transfers it to the upper level
 cycle_time = 30
 
-
 [transmitter.parser]
-class = Simple
+class = ParserSimple
 
 [transmitter.parser.simple]
+# Configuration for ParserSimple
 
-;[transmitter.parser.json]
-;template_type = JSON
-;template_file = template.json
+[transmitter.parser.template]
+# Configuration for ParserTemplate
+
+# template file used to parse data with the template engine (jinja2)
+file = default.json.tmpl
 
 [transmitter.sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket
-class = DoNothing
+class = SenderDoNothing
 
 [transmitter.sender.donotihing]
 
 [transmitter.sender.tcpsocket]
 host = localhost
 port = 1476
-
-;[transmitter.sender.mqtt]
-;communication_mqtt_host = localhost
-;communication_mqtt_port = 12345
-;communication_mqtt_channel = channel
-;
-;[transmitter.sender.http]
-;communication_http_host = localhost
-;communication_http_port = 12345
-;communication_http_endpoint = /
