--- a/setup.cfg
+++ b/setup.cfg
@@ -58,6 +58,7 @@ install_requires =
     requests>=2.23.0
     netifaces>=0.10.9
     gunicorn>=20.0.4; python_version > "3"
+    Jinja2>=2.11.2
 
 [options.packages.find]
 exclude =
