--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -212,7 +212,7 @@ print_stack_trace = True
 
 [transmitter]
 # Enable or disable the transmitter module of Arancino
-enabled = False
+enabled = True
 
 [transmitter.reader]
 
