introduce template files: xml, yaml and fixed the json one

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -230,7 +230,11 @@ class = ParserTemplate
 # Configuration for ParserTemplate
 
 # template file used to parse data with the template engine (jinja2)
-file = default.json.tmpl
+#   default available templates:
+#   - default.yaml.tmpl
+#   - default.json.tmpl
+#   - default.xml.tmpl
+file = default.yaml.tmpl
 
 [transmitter.sender]
 # Available Senders are: SenderDoNothing, SenderTcpSocket
