new mqtt sender and other fix and improvements

--- a/config/arancino.prod.cfg
+++ b/config/arancino.prod.cfg
@@ -215,7 +215,6 @@ print_stack_trace = True
 enabled = False
 
 [transmitter.reader]
-
 # Represents the time (in seconds) in which the reader collects data
 # and transfers it to the upper level
 cycle_time = 30
@@ -245,3 +244,30 @@ class = SenderDoNothing
 [transmitter.sender.tcpsocket]
 host = localhost
 port = 1476
+
+[transmitter.sender.mqtt]
+use_tls = False
+qos = 1
+retain = False
+
+# NOTE: non available at the moment.
+# channel parameter can contains placeholder with the using of "{" and "}"
+# placeholder can be:
+#   - key -> the name of the key that contains the measurements
+#   - labels.port_id -> the identifier of the port that provides the measurements
+#   - labels.port_type -> the type of the port that provides the measurements
+#   - labels.device_id -> the identifier of the device where the ports are connected to. (Note: not always available)
+#   - labels.?????
+
+topic = /data
+
+# plain
+host = yourbroker.mqtt.com
+port = 1883
+username = username
+password = 12345
+
+# secure
+ca_path =
+cert_path =
+key_path =
