--- a/setup.cfg
+++ b/setup.cfg
@@ -59,6 +59,7 @@ install_requires =
     netifaces>=0.10.9
     gunicorn>=20.0.4; python_version > "3"
     Jinja2>=2.11.2
+    paho-mqtt>=1.5.1
 
 [options.packages.find]
 exclude =
