--- a/setup.cfg
+++ b/setup.cfg
@@ -71,8 +71,7 @@ extras =
     extras/post-install.sh
     extras/arancino.service
 config =
-    config/arancino.prod.cfg
-    config/arancino.dev.cfg
+    config/arancino.cfg
     config/gunicorn.cfg.py
 
 [options.entry_points]
