minor improvement to the module:
* now the python3 major version has been set correctly in setup.cfg
* arancino.service should be started always after rc.local

--- a/setup.cfg
+++ b/setup.cfg
@@ -57,9 +57,10 @@ install_requires =
     Flask_HTTPAuth>=3.3.0
     requests>=2.23.0
     netifaces>=0.10.9
-    gunicorn>=20.0.4; python_version > "3"
+    gunicorn>=20.0.4
     Jinja2>=2.11.2
     paho-mqtt>=1.5.1
+python_requires = >= 3.5
 
 [options.packages.find]
 exclude =
