introduzione modulo trasmitter

--- a/config/arancino.dev.cfg
+++ b/config/arancino.dev.cfg
@@ -222,24 +222,29 @@ cycle_time = 10
 [transmitter.parser]
 class = ParserSimple
 
-[transmitter.parser.simple]
-# Configuration for ParserSimple
-
-[transmitter.parser.template]
-# Configuration for ParserTemplate
-
 # template file used to parse data with the template engine (jinja2)
 #   default available templates:
 #   - default.yaml.tmpl
 #   - default.json.tmpl
 #   - default.xml.tmpl
-file = default.yaml.tmpl
+
+file = default.json.tmpl
+
+[transmitter.parser.simple]
+# Configuration for ParserSimple
+
+
+
+[transmitter.parser.s4t]
+# Configuration for ParserS4T
+
+db_name = db_test
 
 [transmitter.sender]
-# Available Senders are: SenderDoNothing, SenderTcpSocket
-class = SenderDoNothing
+# Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
+class = SenderMqtt
 
-[transmitter.sender.donotihing]
+[transmitter.sender.donothing]
 
 [transmitter.sender.tcpsocket]
 host = localhost
@@ -262,12 +267,14 @@ retain = False
 topic = /data
 
 # plain
-host = yourbroker.mqtt.com
+host = vulcano.smartme.io
 port = 1883
-username = username
-password = 12345
+username = tcu
+password = tecnokar
 
 # secure
 ca_path =
 cert_path =
 key_path =
+
+[transmitter.sender.mqtts4t]
