aggiornato arancino.cfg con nuovi parametri

--- a/config/arancino.cfg
+++ b/config/arancino.cfg
@@ -217,33 +217,38 @@ enabled = False
 [transmitter.reader]
 # Represents the time (in seconds) in which the reader collects data
 # and transfers it to the upper level
-cycle_time = 30
+cycle_time = 10
 
 [transmitter.parser]
 class = ParserSimple
-
-[transmitter.parser.simple]
-# Configuration for ParserSimple
-
-[transmitter.parser.template]
-# Configuration for ParserTemplate
 
 # template file used to parse data with the template engine (jinja2)
 #   default available templates:
 #   - default.yaml.tmpl
 #   - default.json.tmpl
 #   - default.xml.tmpl
-file = default.yaml.tmpl
+
+file = default.json.tmpl
+
+[transmitter.parser.simple]
+# Configuration for ParserSimple
+
+
+
+[transmitter.parser.s4t]
+# Configuration for ParserS4T
+
+db_name = db_name
 
 [transmitter.sender]
-# Available Senders are: SenderDoNothing, SenderTcpSocket
+# Available Senders are: SenderDoNothing, SenderTcpSocket, SenderMqtt, SenderMqttS4T
 class = SenderDoNothing
 
-[transmitter.sender.donotihing]
+[transmitter.sender.donothing]
 
 [transmitter.sender.tcpsocket]
-host = localhost
-port = 1476
+host = your_host.it
+port = your_port_number
 
 [transmitter.sender.mqtt]
 use_tls = False
@@ -259,15 +264,17 @@ retain = False
 #   - labels.device_id -> the identifier of the device where the ports are connected to. (Note: not always available)
 #   - labels.?????
 
-topic = /data
+topic = your_topic
 
 # plain
-host = yourbroker.mqtt.com
-port = 1883
-username = username
-password = 12345
+host = your_host.it
+port = your_port_number
+username = your_username
+password = your_password
 
 # secure
 ca_path =
 cert_path =
 key_path =
+
+[transmitter.sender.mqtts4t]
