move templates file update changelog

--- a/setup.cfg
+++ b/setup.cfg
@@ -74,6 +74,11 @@ extras =
 config =
     config/arancino.cfg
     config/gunicorn.cfg.py
+templates =
+    templates/default.json.tmpl
+    templates/default.xml.tmpl
+    templates/default.yaml.tmpl
+    templates/S4T_default.json.tmpl
 
 [options.entry_points]
 console_scripts =
